# memorylane-ai

./: .gitignore  CHANGELOG.md  README.md  project-context.txt  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  analytics.py  config.py  data_processor.py  embeddings.py  llm.py  main.py  pyproject.toml  rag.py
backend/data/: analytics.json
backend/data/chroma/2f84f271-a02b-46e5-bc39-af60e12f65ad/: index_metadata.pickle
backend/features/: chat.py  quiz.py  roast.py  story.py  timeline.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Header.tsx  Sidebar.tsx  UploadModal.tsx
frontend/components/modes/: AnalyticsMode.tsx  ChatMode.tsx  QuizMode.tsx  RoastMode.tsx  StoryMode.tsx  TimelineMode.tsx
frontend/components/ui/: GlassCard.tsx  GradientText.tsx  LoadingDots.tsx
frontend/lib/: api.ts
