[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "couple-chatbot-backend"
version = "1.0.0"
description = "FastAPI backend for the Couple Chatbot"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic-settings==2.6.1",
    "openai==1.55.3",
    "chromadb==0.5.23",
    "python-multipart==0.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
